<resources>
    <string name="app_name">Examen2Lp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_olvide">Olvide</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menus">Menus</string>
    <string name="title_activity_register">Registrar nueva persona</string>




    <string name="action_new_person">Nueva Persona</string>
    <string name="action_about">Acerca de</string>
    <string name="title_activity_about">Acerca de</string>

    <string name="action_synchronize">Sincroniza</string>
    <string name="action_activate">Activar</string>
    <string name="action_edit">Modificar</string>
    <string name="action_delete">Delete</string>


    <string name="message_name">Nombre</string>
    <string name="message_last_name_f">Apellido Paterno</string>
    <string name="message_last_name_m">Apellido Materno</string>
    <string name="message_usuario">Usuario</string>
    <string name="message_contraseña">Contraseña</string>

    <string name="message_site">Sito Web</string>
    <string name="message_address">Dirección</string>
    <string name="message_sex">Sexo:</string>
    <string name="message_score">Puntaje:</string>
    <string name="message_married">Soltero</string>


    <string name="btn_msg_save">Guardar</string>

    <string name="btn_msg_cancelar">Cancelar</string>


    <string name="action_back">Atras</string>


    <string name="action_contacts">Contactos</string>
    <string name="title_activity_contact">ContactActivity</string>


    <string name="radio_active">Activo</string>
    <string name="radio_inactive">Inactivo</string>


</resources>
